[package]
name = "red-orange-green"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6" # load image; show bbox
show-image = { version = "0.13.1", features = ["image"] } # show out_image from lib
ndarray = "0.15.6" # convert to in_img->in_tensor; out_tensor->bbox
ort = "1.14.8" # dl; load .onnx models
# opencv = "0.82.1" # errors
